--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -41,6 +41,8 @@ $rclone-manager-theme: mat.define-light-theme(
   /* Define custom colors for light mode */
   --app-background: #ffffff;
   --semi-transparent-background: rgba(255, 255, 255, 0.8);
+  --shadow-color: rgba(0, 0, 0, 0.35);
+  --hover-color: rgba(0, 0, 0, 0.1);
   --app-text-color: #000000;
   --secodary-text-color: #939090;
   --border-color: #cfcfcf;
@@ -57,6 +59,8 @@ $rclone-manager-theme: mat.define-light-theme(
   --green: #5CB85C;
   --orange: #F89F24;
   --red: #FF0000;
+  --blue: #2196F3;
+  --purple: #9747FF;
 }
 
 /* 🌙 Dark Theme */
@@ -65,6 +69,8 @@ $rclone-manager-theme: mat.define-light-theme(
   /* Define custom colors for dark mode */
   --app-background: #1e1e1e;
   --semi-transparent-background: rgba(30, 30, 30, 0.8);
+  --shadow-color: rgba(255, 255, 255, 0.35);
+  --hover-color: rgba(255, 255, 255, 0.1);
   --app-text-color: #ffffff;
   --secodary-text-color: #939090;
   --border-color: #808080;
@@ -81,9 +87,12 @@ $rclone-manager-theme: mat.define-light-theme(
   --green: #5CB85C;
   --orange: #F89F24;
   --red: #FF0000;
+  --blue: #2196F3;
+  --purple: #9747FF;
 }
 
 :root {
+  --border-radius: 16px;
   --title-bar-padding: 8px;
   --titlebar-height: 40px; // Adjust this value to match your title bar height
   --titlebar-border: 1px;
@@ -100,6 +109,60 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+p, h1, h2, h3, h4, h5, h6 {
+  transition: color 0.3 ease;
+  margin-bottom: 0;
+  margin-top: 0;
+
+  .icon-bw {
+    .dark & {
+      filter: invert(1);
+    }
+
+    .light & {
+      filter: invert(0);
+    }
+  }
+}
+
+button {
+  cursor: pointer;
+  padding: 6px 12px;
+  border: none;
+  border-radius: var(--border-radius);
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+  color: white;
+
+  &.open-files {
+    background-color: var(--blue);
+  }
+  
+  &.mount {
+    background-color: var(--green);
+  }
+  
+  &.fix {
+    background-color: var(--orange);
+  }
+
+  &.new-remote {
+    background-color: var(--blue);
+  }
+
+  &.unmount {
+    background-color: var(--red);
+  }
+
+  &.edit {
+    background-color: var(--purple);
+  }
+}
+
 .mat-mdc-menu-item-text {
   display: flex;
   justify-content: space-between;
@@ -133,3 +196,25 @@ body {
   width: 24px;
   height: 24px;
 }
+
+.icon {
+  width: 20px;
+  height: 20px;
+}
+
+/* Disable text selection and use default cursor */
+* {
+  user-select: none;
+  cursor: default;
+  transition: background-color 0.3s ease;
+  // transition: color 100ms ease;
+
+}
+
+/* Allow text selection and normal text cursor inside inputs */
+input, textarea, [contenteditable="true"] {
+  user-select: text;
+  cursor: text;
+}
+
+
