--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -42,7 +42,7 @@ $rclone-manager-theme: mat.define-light-theme(
   --app-background: #ffffff;
   --semi-transparent-background: rgba(255, 255, 255, 0.8);
   --shadow-color: rgba(0, 0, 0, 0.35);
-  --hover-color: rgba(0, 0, 0, 0.1);
+  --hover-color: rgb(200, 200, 200);
   --app-text-color: #000000;
   --secodary-text-color: #939090;
   --border-color: #cfcfcf;
@@ -70,7 +70,7 @@ $rclone-manager-theme: mat.define-light-theme(
   --app-background: #1e1e1e;
   --semi-transparent-background: rgba(30, 30, 30, 0.8);
   --shadow-color: rgba(255, 255, 255, 0.35);
-  --hover-color: rgba(255, 255, 255, 0.1);
+  --hover-color: rgb(55, 55, 55);
   --app-text-color: #ffffff;
   --secodary-text-color: #939090;
   --border-color: #808080;
@@ -138,7 +138,21 @@ button {
   gap: 6px;
   color: white;
 
-  &.open-files {
+  img {
+    cursor: pointer;
+
+    &.icon-bw {
+      .dark & {
+        filter: invert(1);
+      }
+
+      .light & {
+        filter: invert(0);
+      }
+    }
+  }
+
+  &.blue {
     background-color: var(--blue);
   }
   
@@ -208,7 +222,7 @@ button {
   cursor: default;
   transition: background-color 0.3s ease;
   // transition: color 100ms ease;
-
+  -webkit-user-drag: none; /* Disable image dragging in WebKit browsers */
 }
 
 /* Allow text selection and normal text cursor inside inputs */
@@ -217,4 +231,13 @@ input, textarea, [contenteditable="true"] {
   cursor: text;
 }
 
+.mat-mdc-dialog-container .mdc-dialog__surface {
+  border-radius: 36px !important;
+  color: var(--app-text-color) !important;
+  background-color: var(--app-background) !important;
+}
+
+.mdc-text-field--filled:not(.mdc-text-field--disabled) {
+  background-color: #ECF9FF !important;
+}
 
