--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -105,7 +105,7 @@
                     <img src="assets/icons/{{ remote.icon }}.svg" class="icon" />{{ remote.id }}
                   </p>
                 </div>
-                <button class="blue">
+                <button class="open">
                   <img src="assets/icons/folder-white.svg" class="icon" />
                   Open Files
                 </button>
