--- a/src/app/components/titlebar/titlebar.component.scss
+++ b/src/app/components/titlebar/titlebar.component.scss
@@ -91,6 +91,11 @@
   display: flex;
   align-items: end;
   position: relative;
+  justify-content: left;
+  padding-block-end: 3px;
+  padding-block-start: 2px;
+  padding-inline-end: 6px;
+  padding-inline-start: 6px;
 
   &:hover {
     border-color: var(--theme-border-hover);
