--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -41,7 +41,7 @@ $rclone-manager-theme: mat.define-light-theme(
   /* Define custom colors for light mode */
   --app-background: #ffffff;
   --semi-transparent-background: rgba(255, 255, 255, 0.8);
-  --shadow-color: rgba(0, 0, 0, 0.35);
+  --shadow-color: rgba(0, 0, 0, 0.32);
   --hover-color: rgb(200, 200, 200);
   --app-text-color: #000000;
   --secodary-text-color: #939090;
@@ -67,9 +67,9 @@ $rclone-manager-theme: mat.define-light-theme(
 .dark {
 
   /* Define custom colors for dark mode */
-  --app-background: #1e1e1e;
+  --app-background: #000000;
   --semi-transparent-background: rgba(30, 30, 30, 0.8);
-  --shadow-color: rgba(255, 255, 255, 0.35);
+  --shadow-color: rgba(255, 255, 255, 0.32);
   --hover-color: rgb(55, 55, 55);
   --app-text-color: #ffffff;
   --secodary-text-color: #939090;
@@ -92,7 +92,7 @@ $rclone-manager-theme: mat.define-light-theme(
 }
 
 :root {
-  --border-radius: 16px;
+  --border-radius: 8px;
   --title-bar-padding: 8px;
   --titlebar-height: 40px; // Adjust this value to match your title bar height
   --titlebar-border: 1px;
@@ -136,6 +136,7 @@ button {
   align-items: center;
   justify-content: center;
   gap: 6px;
+  background-color: transparent;
   color: white;
 
   img {
@@ -152,11 +153,8 @@ button {
     }
   }
 
-  &.blue {
-    background-color: var(--blue);
-  }
-  
-  &.mount {
+  &.mount,
+  &.finish {
     background-color: var(--green);
   }
   
@@ -164,7 +162,9 @@ button {
     background-color: var(--orange);
   }
 
-  &.new-remote {
+
+  &.open,
+  &.next {
     background-color: var(--blue);
   }
 
@@ -172,9 +172,17 @@ button {
     background-color: var(--red);
   }
 
-  &.edit {
+  &.edit,
+  &.back {
     background-color: var(--purple);
   }
+
+  &:disabled {
+    background-color: var(--button-background);
+    color: var(--button-text);
+    cursor: not-allowed;
+  }
+
 }
 
 .mat-mdc-menu-item-text {
@@ -232,7 +240,7 @@ input, textarea, [contenteditable="true"] {
 }
 
 .mat-mdc-dialog-container .mdc-dialog__surface {
-  border-radius: 36px !important;
+  border-radius: 24px !important;
   color: var(--app-text-color) !important;
   background-color: var(--app-background) !important;
 }
@@ -241,3 +249,7 @@ input, textarea, [contenteditable="true"] {
   background-color: #ECF9FF !important;
 }
 
+.cdk-overlay-dark-backdrop {
+  background: var(--shadow-color) !important;
+  border-radius: var(--border-radius) !important;
+}
