--- a/src/app/modals/keyboard-shortcuts-modal/keyboard-shortcuts-modal.component.html
+++ b/src/app/modals/keyboard-shortcuts-modal/keyboard-shortcuts-modal.component.html
@@ -1,7 +1,7 @@
 <div class="modal-container">
     <div class="modal-header">
         <button mat-icon-button (click)="close()">
-            <img src="assets/icons/search.svg" class="icon icon-bw" />
+            <img src="assets/icons/titlebar/search.svg" class="icon icon-bw" />
         </button>
         <p>Keyboard Shortcuts</p>
         <button mat-button (click)="close()">
