--- a/src/app/components/titlebar/titlebar.component.html
+++ b/src/app/components/titlebar/titlebar.component.html
@@ -1,65 +1,49 @@
 <div class="title-bar" data-tauri-drag-region>
   <div class="left-section">
     <button mat-icon-button class="add-button" (click)="openRemoteConfigModal()">
-      <mat-icon>add</mat-icon>
+      <img src="assets/icons/titlebar/add.svg" class="icon icon-bw" />
     </button>
-    <img 
-      src="assets/rclone_symbolic.svg" 
-      alt="RClone Manager Logo" 
-      [ngClass]="{
+    <img src="assets/rclone_symbolic.svg" alt="RClone Manager Logo" [ngClass]="{
         'logo-dark': selectedTheme === 'dark' || (selectedTheme === 'system' && getSystemTheme() === 'dark'),
         'logo-light': selectedTheme === 'light' || (selectedTheme === 'system' && getSystemTheme() === 'light')
-      }"
-    />
+      }" />
     <span class="title">RClone Manager</span>
   </div>
-  
+
 
   <div class="right-section">
     <button mat-icon-button>
-      <mat-icon>search</mat-icon>
+      <img src="assets/icons/titlebar/search.svg" class="icon icon-bw" />
     </button>
     <button mat-icon-button [matMenuTriggerFor]="menu">
-      <mat-icon>menu</mat-icon>
+      <img src="assets/icons/titlebar/menu-bar.svg" class="icons icon-bw" />
     </button>
     <button mat-icon-button (click)="minimizeWindow()">
-      <mat-icon>remove</mat-icon>
+      <img src="assets/icons/titlebar/remove.svg" class="icons icon-bw" />
     </button>
     <button mat-icon-button (click)="maximizeWindow()">
-      <mat-icon>crop_square</mat-icon>
+      <img src="assets/icons/titlebar/check_box.svg" class="icons icon-bw" />
     </button>
     <button mat-icon-button (click)="closeWindow()">
-      <mat-icon>close</mat-icon>
+      <img src="assets/icons/titlebar/close.svg" class="icons icon-bw" />
     </button>
   </div>
 
   <mat-menu #menu="matMenu">
     <div class="theme-selector">
-      <button
-        mat-icon-button
-        class="theme-button system"
-        [class.selected]="selectedTheme === 'system'"
-        (click)="$event.stopPropagation(); setTheme('system')"
-      >
-        <mat-icon *ngIf="selectedTheme === 'system'" class="checkmark">done</mat-icon>
+      <button mat-icon-button class="theme-button system" [class.selected]="selectedTheme === 'system'"
+        (click)="$event.stopPropagation(); setTheme('system')">
+        <img src="assets/icons/circle-check-blue.svg" *ngIf="selectedTheme === 'system'" class="icon checkmark" />
       </button>
 
-      <button
-        mat-icon-button
-        class="theme-button light"
-        [class.selected]="selectedTheme === 'light'"
-        (click)="$event.stopPropagation(); setTheme('light')"
-      >
-        <mat-icon *ngIf="selectedTheme === 'light'" class="checkmark">done</mat-icon>
+      <button mat-icon-button class="theme-button light" [class.selected]="selectedTheme === 'light'"
+        (click)="$event.stopPropagation(); setTheme('light')">
+        <img src="assets/icons/circle-check-blue.svg" *ngIf="selectedTheme === 'light'" class="icon checkmark" />
       </button>
 
-      <button
-        mat-icon-button
-        class="theme-button dark"
-        [class.selected]="selectedTheme === 'dark'"
-        (click)="$event.stopPropagation(); setTheme('dark')"
-      >
-        <mat-icon *ngIf="selectedTheme === 'dark'" class="checkmark">done</mat-icon>
+      <button mat-icon-button class="theme-button dark" [class.selected]="selectedTheme === 'dark'"
+        (click)="$event.stopPropagation(); setTheme('dark')">
+        <img src="assets/icons/circle-check-blue.svg" *ngIf="selectedTheme === 'dark'" class="icon checkmark" />
       </button>
     </div>
 
