--- a/src/app/components/titlebar/titlebar.component.scss
+++ b/src/app/components/titlebar/titlebar.component.scss
@@ -104,16 +104,12 @@
   .checkmark {
     width: 20px;
     height: 20px;
-    background-color: var(--selected-border);
+    background-color: white;
     border-radius: 50%;
-    font-size: 16px;
-    font-weight: bold;
-    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: -8px;
-    transition: background 0.3s ease-in-out;
   }
 }
 .light {
